--- a/src/App.css
+++ b/src/App.css
@@ -369,3 +369,20 @@ body {
 #ultra-page {
   display: none;
 }
+button {
+  border: none;
+  background-color: transparent;
+  outline: none;
+  cursor: pointer;
+}
+button:focus {
+  border: none;
+}
+.closebutton {
+  background-color: transparent;
+  cursor:pointer;
+  border-radius: 5px;
+  color: white;
+  border: 2px solid white;
+  padding: 3px 3px;
+}
