--- a/src/App.css
+++ b/src/App.css
@@ -267,10 +267,10 @@ body {
 }
 .sub-box {
   margin: 0 auto;
-  width: 20rem;
+  width: 16rem;
   background-color: #aaa;
   color: black;
-  height: 24rem;
+  height: 20rem;
   border-radius: 20px;
 }
 .box-title {
@@ -366,6 +366,7 @@ body {
 #mynftees-page,
 #rare-page,
 #collections-page,
+#menu-page,
 #ultra-page {
   display: none;
 }
@@ -386,4 +387,14 @@ button:focus {
   border: 2px solid white;
   padding: 3px 3px;
   float:right
+}
+
+.textcenter {
+  text-align: center;
+}
+a {
+  color: #FFF;
+}
+a:hover {
+   color: white
 }
