--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -18,7 +18,7 @@
 .title {
   color: black;
   font-weight: bold;
-  font-size: xx-large;
+  font-size: 2vw;
 }
 
 .body {
@@ -27,7 +27,7 @@
   padding-right: 4%;
   color: black;
   font-weight: bold;
-  font-size: large;
+  font-size: 1vw;
 }
 
 .footer {
