--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
   font-family: "Aller Bold Italic"
 }
 .container {
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -249,6 +249,7 @@ body {
 }
 .ultra-exclusive {
   display: flex;
+  height: auto;
   justify-content: center;
   align-items: center;
   margin-top: 2.5em;
@@ -561,5 +562,5 @@ a:hover {
   border: 1px solid black;
   border-radius: 8px;
   color: black;
-  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5); 
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
