--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
   font-family: "Aller Bold Italic"
 }
 .container {
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
