--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,9 +1,12 @@
 .modal {
-  height: 32.4rem;
-  width: 54.4rem;
   position: absolute;
+  left: 0;
+  right: 0;
   top: 18%;
-  left: 26%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90vw;
+  height: auto;
   z-index: 999;
   background: white;
   border-radius: 8px;
@@ -49,75 +52,4 @@
 
 .footerCloseButton:hover{
   background: white;
-}
-
-@media screen and (max-width: 980px) {
-  .footer {
-    position: absolute;
-    left: 20px;
-    width: 110vw;
-}
-  .footer-img{
-    position: absolute;
-    bottom: 0;
-    left: -10px;
-    height: 100px;
-}
-
-  .content{
-    display: static;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    overflow: auto;
-    min-height: 100vh;
-    min-width: 120vw;
-  }
-
-}
-
-@media (max-width: 928px) {
-  .modal {
-    height: auto;
-    width: 100%;
-    position: absolute;
-    top: 18%;
-    left: 0%;
-    z-index: 999;
-    background: white;
-    border-radius: 8px;
-  }
-
-  .title {
-     font-size: .8em;
-     text-align: center;
-      color: black;
-  }
-
-  .body {
-    text-align: center;
-    padding-left:  4%;
-    padding-right: 4%;
-    color: black;
-    font-weight: bold;
-    font-size: .8em;
-  }
-
-  .footer {
-    position: absolute;
-    top: auto;
-    text-align: center;
-    padding: 10px;
-
-  }
-
-  .footerCloseButton {
-    position: absolute;
-    left: 40%;
-    background: white;
-    border: 1px solid black;
-    border-radius: 8px;
-    color: black;
-    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
-  }
 }
