--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   margin: 0;
   padding: 0;
 }
+@font-face {
+  font-family: "Aller Bold Italic";
+  src: local("AllerBoldItalic"),
+   url("./fonts/Aller_BdIt.ttf") format("truetype");
+  font-weight: bold;
+  }
 body {
   background: url(/src/data/background.png);
   background-repeat: no-repeat;
@@ -562,5 +568,6 @@ a:hover {
   border: 1px solid black;
   border-radius: 8px;
   color: black;
-  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+  font-family: "Aller Bold Italic";
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5); 
 }
