--- a/src/App.css
+++ b/src/App.css
@@ -128,7 +128,7 @@ body {
   width: min-content;
   opacity: 0;
   margin-left: 36.5em;
-  margin-top: -17.8em;
+  margin-top: -18em;
 }
 .nftees-highlight img {
   width: 2.6rem;
@@ -163,7 +163,7 @@ body {
 .medium-highlight {
   width: min-content;
   margin-left: 50.55em;
-  margin-top: 0.9em;
+  margin-top: .7em;
   opacity: 0;
 }
 .medium-highlight img {
@@ -174,8 +174,8 @@ body {
 }
 .twitter-highlight {
   width: min-content;
-  margin-left: 52.2em;
-  margin-top: -2em;
+  margin-left: 52.3em;
+  margin-top: -2.1em;
   opacity: 0;
 }
 .twitter-highlight img {
@@ -186,8 +186,8 @@ body {
 }
 .twitch-highlight {
   width: min-content;
-  margin-left: 54.4em;
-  margin-top: -3em;
+  margin-left: 54.2em;
+  margin-top: -2.8em;
   opacity: 0;
 }
 .twitch-highlight img {
@@ -483,11 +483,7 @@ body {
   .hero img {
     width: 25rem;
   }
-  .content {
-    zoom: 42.5%;
-    min-width: 59.9rem;
-    max-width: 59.9rem;
-  }
+
   .min-container,
   .sub-container {
     min-width: 23.1rem;
@@ -523,6 +519,139 @@ body {
     zoom: 260%;
   }
 }
+
+.team-highlight {
+  margin-top: -1.1em;
+  margin-left: 25.3em;
+  opacity: 0;
+}
+.team-highlight img {
+  width: 2.1rem;
+}
+.team-highlight:hover {
+  opacity: 100%;
+}
+.tees-highlight {
+  margin-top: -1.4em;
+  margin-left: 27.8em;
+  opacity: 0;
+  width: min-content;
+}
+.tees-highlight img {
+  width: 3.8rem;
+}
+.tees-highlight:hover {
+  opacity: 100%;
+}
+.rare-highlight {
+  width: min-content;
+  margin-left: 30.8em;
+  margin-top: 3.2em;
+  opacity: 0;
+}
+.rare-highlight img {
+  width: 2.3rem;
+}
+.rare-highlight:hover {
+  opacity: 100%;
+}
+.ultra-highlight {
+  width: min-content;
+  opacity: 0;
+  margin-left: 27.1em;
+  margin-top: -1.1em;
+}
+.ultra-highlight img {
+  width: 3rem;
+}
+.ultra-highlight:hover {
+  opacity: 100%;
+}
+.nftees-highlight {
+  width: min-content;
+  opacity: 0;
+  margin-left: 36.5em;
+  margin-top: -18em;
+}
+.nftees-highlight img {
+  width: 2.6rem;
+}
+.nftees-highlight:hover {
+  opacity: 100%;
+}
+.partners-highlight {
+  width: min-content;
+  opacity: 0;
+  margin-left: 41.1em;
+  margin-top: -2.7em;
+}
+.partners-highlight img {
+  width: 13.5rem;
+}
+.partners-highlight:hover {
+  opacity: 100%;
+}
+.connect-highlight {
+  width: min-content;
+  margin-left: 22.1em;
+  margin-top: -15.4em;
+  opacity: 0;
+}
+.connect-highlight img {
+  width: 16rem;
+}
+.connect-highlight:hover {
+  opacity: 100%;
+}
+.medium-highlight {
+  width: min-content;
+  margin-left: 50.55em;
+  margin-top: .7em;
+  opacity: 0;
+}
+.medium-highlight img {
+  width: 1.5rem;
+}
+.medium-highlight:hover {
+  opacity: 100%;
+}
+.twitter-highlight {
+  width: min-content;
+  margin-left: 52.3em;
+  margin-top: -2.1em;
+  opacity: 0;
+}
+.twitter-highlight img {
+  width: 1.5rem;
+}
+.twitter-highlight:hover {
+  opacity: 100%;
+}
+.twitch-highlight {
+  width: min-content;
+  margin-left: 54.2em;
+  margin-top: -2.8em;
+  opacity: 0;
+}
+.twitch-highlight img {
+  width: 1.8rem;
+}
+.twitch-highlight:hover {
+  opacity: 100%;
+}
+.t-highlight {
+  width: min-content;
+  margin-top: -3.8em;
+  margin-left: 3.9em;
+  opacity: 0;
+}
+.t-highlight img {
+  width: 1.9rem;
+}
+.t-highlight:hover {
+  opacity: 100%;
+}
+
 
 a:link {
   color: white;
