--- a/src/App.css
+++ b/src/App.css
@@ -484,6 +484,12 @@ body {
     width: 25rem;
   }
 
+  .content {
+  zoom: 42.5%;
+  min-width: 59.9rem;
+  max-width: 59.9rem;
+}
+
   .min-container,
   .sub-container {
     min-width: 23.1rem;
@@ -570,11 +576,11 @@ body {
 .nftees-highlight {
   width: min-content;
   opacity: 0;
-  margin-left: 36.5em;
-  margin-top: -18em;
+  margin-left: 32.7em;
+  margin-top: -8.1em;
 }
 .nftees-highlight img {
-  width: 2.6rem;
+  width: 1rem;
 }
 .nftees-highlight:hover {
   opacity: 100%;
