--- a/src/App.css
+++ b/src/App.css
@@ -524,27 +524,27 @@ body {
   ._collections_page {
     zoom: 260%;
   }
-}
+
 
 .team-highlight {
-  margin-top: -1.1em;
-  margin-left: 25.3em;
+  margin-top: -1.5em;
+  margin-left: 25.4em;
   opacity: 0;
 }
 .team-highlight img {
-  width: 2.1rem;
+  width: 1.9rem;
 }
 .team-highlight:hover {
   opacity: 100%;
 }
 .tees-highlight {
-  margin-top: -1.4em;
-  margin-left: 27.8em;
+  margin-top: -1.3em;
+  margin-left: 27.9em;
   opacity: 0;
   width: min-content;
 }
 .tees-highlight img {
-  width: 3.8rem;
+  width: 3.6rem;
 }
 .tees-highlight:hover {
   opacity: 100%;
@@ -577,7 +577,7 @@ body {
   width: min-content;
   opacity: 0;
   margin-left: 32.7em;
-  margin-top: -8.1em;
+  margin-top: -8em;
 }
 .nftees-highlight img {
   width: 1rem;
@@ -588,76 +588,87 @@ body {
 .partners-highlight {
   width: min-content;
   opacity: 0;
-  margin-left: 41.1em;
-  margin-top: -2.7em;
+  margin-left: 34.7em;
+  margin-top: -1.2em;
 }
 .partners-highlight img {
-  width: 13.5rem;
+  width: 5.5rem;
 }
 .partners-highlight:hover {
   opacity: 100%;
 }
 .connect-highlight {
   width: min-content;
-  margin-left: 22.1em;
-  margin-top: -15.4em;
+  margin-left: 26.6em;
+  margin-top: -6.7em;
   opacity: 0;
 }
 .connect-highlight img {
-  width: 16rem;
+  width: 6.7rem;
 }
 .connect-highlight:hover {
   opacity: 100%;
 }
 .medium-highlight {
   width: min-content;
-  margin-left: 50.55em;
-  margin-top: .7em;
+  margin-left: 38.4em;
+  margin-top: 0em;
   opacity: 0;
 }
 .medium-highlight img {
-  width: 1.5rem;
+  width: .8em;
 }
 .medium-highlight:hover {
   opacity: 100%;
 }
 .twitter-highlight {
   width: min-content;
-  margin-left: 52.3em;
-  margin-top: -2.1em;
+  margin-left: 39.2em;
+  margin-top: -1.4em;
   opacity: 0;
 }
 .twitter-highlight img {
-  width: 1.5rem;
+  width: .7rem;
 }
 .twitter-highlight:hover {
   opacity: 100%;
 }
 .twitch-highlight {
   width: min-content;
-  margin-left: 54.2em;
-  margin-top: -2.8em;
+  margin-left: 40em;
+  margin-top: -1.5em;
   opacity: 0;
 }
 .twitch-highlight img {
-  width: 1.8rem;
+  width: .8rem;
 }
 .twitch-highlight:hover {
   opacity: 100%;
 }
 .t-highlight {
   width: min-content;
-  margin-top: -3.8em;
-  margin-left: 3.9em;
+  margin-top: -1.8em;
+  margin-left: 19em;
   opacity: 0;
 }
 .t-highlight img {
-  width: 1.9rem;
+  width: .8em;
 }
 .t-highlight:hover {
   opacity: 100%;
 }
-
+.collections-highlight {
+  margin-top: 15.7em;
+  margin-left: 19.3em;
+  opacity: 0;
+  width: min-content;
+}
+.collections-highlight img {
+  width: 5.2em;
+}
+.collections-highlight:hover {
+  opacity: 100%;
+}
 
 a:link {
   color: white;
@@ -701,4 +712,5 @@ a:hover {
   color: black;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
   font-family: "Aller Bold Italic";
+}
 }
