--- a/src/App.css
+++ b/src/App.css
@@ -540,5 +540,24 @@ body {
     font-family: "Aller Bold Italic"
   }
 
+  a:link {
+    text-decoration: none;
+  }
+
+  /* visited link */
+  a:visited {
+    text-decoration: none;
+    color: white;
+  }
+
+  /* mouse over link */
+  a:hover {
+    text-decoration: none;
+  }
+
+  /* selected link */
+  a:active {
+    text-decoration: none;
+  }
 
 }
