fixed size of jacket gif in Ultra pages

--- a/src/App.css
+++ b/src/App.css
@@ -273,7 +273,7 @@ body {
 .sub-box {
   margin: 0 auto;
   width: 14rem;
-  background-color: #aaa;
+  background-color: white;
   color: black;
   height: 18rem;
 }
