changed mobile button bg to white

--- a/src/App.css
+++ b/src/App.css
@@ -535,7 +535,7 @@ body {
 @media (max-width: 649px) {
   body {
     background-image: none;
-    background-color: #ABA295;
+    background-color: white;
     font-family: "Aller Bold Italic"
   }
 
