--- a/src/App.css
+++ b/src/App.css
@@ -523,6 +523,7 @@ body {
   font-size: 20px;
   padding: 10px 30px;
   border-radius: 5px;
+  border: black 1px;
   margin: 10px 0px;
   cursor: pointer;
 }
